#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package TimeTool
#------------------------------------------------------------------------

Package author: Matthew J. Weaver

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-03
2015-5-19 David Schneider
- Add option "TimeTool.Analyze.use_calib_db_ref=1" to read reference from 
  calibration database.	JIRA PSAS-149. Also, when eventdump=1, maintain
  a background reference frame that we pass on to EventDump for plotting.
- add example refCalibExample.py
  
	
Tag: V00-03-02
2015-5-14 David Schneider
- fix bug: eventdump feature was labeling ref_roi as _sig.
	
Tag: V00-03-01
2015-5-13 David Schneider
- fix bug in plot_analyze.py example
	
Tag: V00-03-00
2015-5-12 David Schneider
- deprecate old style methods of reporting results (floats and ndarrays)
  only add the TimeToolDataV2 object
- introduce EventDump class to collect data from TimeTool.Analyze and put
  in Event store
- introduce PlotAnalyze python psana module to collect EventDump results
  and interactively plot them
- check for mispelled/unknown configuration keys, report as errors
- Add examples/plot_analyze.py to demonstrate PlotAnalyze module
- Dependency on psana V00-13-02 to use new Configureuable::configList that 
  takes a default argument that is a vector (used to have to use a list for default)
	
Tag: V00-02-03
2015-5-7 David Schneider
- Add unit test. Read some test data outside of package, test against previously seen 
  TimeTool.Analyze results. 

Tag: V00-02-02
2015-4-15 David Schneider
- Tag V00-02-00 introdcued a bug - setting dump=0 in Analyze and Setup no
  longer completely turned off histogramming, meaning the .root file was  
  created. Although this file gets overwritten, in an MPI program race conditions